--- a/client/css/style.css
+++ b/client/css/style.css
@@ -2,6 +2,28 @@
     border: 1px solid black;
 } */
 
+body{
+    background-color:#333333;
+    color: #eee;
+    text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, .5);
+    box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+}
+
+.card{
+    background-color: #999;
+    box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+}
+
+.card-header,#bookTitle {
+    color: rgb(216, 203, 27);
+}
+
+.jumbotron{
+    background-color: #999;
+    text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, .5);
+    box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+}
+
 img {
     width:200px;
 }
